--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,17 +23,55 @@
             border: solid 1px;
             text-align: center;
         }
+        .specs-form{
+            text-align: center;
+            display: flex;
+            justify-content: space-around;
+        }
+        .specs-form div{
+            padding: 10px;
+            background-color: #9fecef;
+            margin-right: 20px;
+            display: inline-block;
+            border-radius: 10px;
+        }
+        input[type='number']{
+            width: 60px;
+        }
     </style>
 </head>
 <body>
-<div >
+<div class="specs-form">
+    <form method="GET" action="">
+        <div>
+            <label>Choose a country: </label>
+            <select th:value="${selected_country}" id="country" name="country">
+                <option value=""> -- </option>
+                <option th:each="country : ${countries}"
+                        th:value="${country}"
+                        th:text="${country}" th:selected="${country==selected_country}"/>
+            </select>
+        </div>
+
+        <div>
+            <label>Search for past</label>
+            <input type="number"
+                   th:value="${selected_days}" id="days" name="days"> <span> days</span>
+        </div>
+        <div>
+            <input type="submit" value="Search"/>
+        </div>
+    </form>
+
+</div>
+<div>
     <table style="border : 1px;">
         <tr>
             <th>Country</th>
             <th>Place</th>
-            <th>magnitude</th>
-            <th>date</th>
-            <th>timestamp</th>
+            <th>Magnitude</th>
+            <th>Date</th>
+            <th>Time</th>
         </tr>
 
         <tr  th:each="earthquake : ${earthquakes}">
